syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.healthcare.grpc";
option java_outer_classname = "MemberProto";

service MemberService {
  rpc GetMemberContactById (MemberRequest) returns (MemberContactResponse);
}

message MemberRequest {
  string id = 1;
}

message MemberContactResponse {
  string id = 1;
  string email = 2;
  string phone = 3;
}